# lotus-render

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  REPOSITORY-ENGINEERING-CONTEXT.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: feature-lane.yml  main-releasability.yml  pr-auto-merge.yml  pr-merge-gate.yml
contracts/: render-data-product-trust.v1.json  render-source-contracts.v1.json  render-supported-features.v1.json
docs/: configuration.md  portfolio-review-attribute-inventory.md  portfolio-review-typst-design-system.md
docs/architecture/: ENTERPRISE_BACKEND_REFACTORING_INSTRUCTIONS.md
docs/operations/: rendering-observability-metrics.md
docs/rfcs/: README.md
docs/runbooks/: service-operations.md
docs/standards/: data-model-ownership.md  durability-consistency.md  enterprise-readiness.md  migration-contract.md  rounding-precision.md  scalability-availability.md
requirements/: ci-tooling.lock.txt  shared-runtime.lock.txt
scripts/: check_monetary_float_usage.py  coverage_gate.py  openapi_quality_gate.py  pip_audit_gate.py  validate_template_registry.py
security/: pip-audit-exceptions.json
src/app/: main.py  render_metrics.py  render_store.py
tests/e2e/: test_smoke.py
tests/golden/: producer-fixtures.v1.json
tests/integration/: test_health.py  test_render_api.py
tests/unit/: test_governance_contracts.py  test_local_docker_runtime_contract.py  test_openapi_quality_gate.py  test_settings.py  (+11 more)
wiki/: Configuration.md  Home.md  Template-Registry.md  _Sidebar.md
(+67 files in other folders)
